import 'package:flutter/material.dart';
import 'package:pocwatchapp/screens/home_screen.dart';
import 'package:pocwatchapp/utilities/constants.dart';

class LoginScreen extends StatefulWidget {
  @override
  _LoginScreenState createState() => _LoginScreenState();
}

class _LoginScreenState extends State<LoginScreen> {
  final _formKey = GlobalKey<FormState>();
  late String email;
  late String password;

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      backgroundColor: Colors.white,
      body: Padding(
        padding: EdgeInsets.symmetric(horizontal: 24.0),
        child: Form(
          key: this._formKey,
          child: Column(
            mainAxisAlignment: MainAxisAlignment.start,
            crossAxisAlignment: CrossAxisAlignment.stretch,
            children: <Widget>[
              SizedBox(
                height: 25,
              ),
              Text(
                'Login Screen',
                style: kButtonTextStyle,
                textAlign: TextAlign.center,
              ),
              SizedBox(
                height: 35,
              ),
              // Hero(
              //   tag: 'login',
              //   child: Container(
              //     width: 200,
              //     height: 200,
              //     decoration: BoxDecoration(
              //         borderRadius: BorderRadius.circular(5),
              //         color: Colors.white,
              //         image: DecorationImage(
              //             image: AssetImage('images/main.jpeg'),
              //             fit: BoxFit.cover)),
              //   ),
              // ),
              Flexible(
                child: Hero(
                  tag: 'login',
                  child: Container(
                    width: 200,
                    height: 200,
                    decoration: BoxDecoration(
                        borderRadius: BorderRadius.circular(5),
                        color: Colors.white,
                        image: DecorationImage(
                            image: AssetImage('images/main.jpeg'),
                            fit: BoxFit.cover)),
                  ),
                ),
              ),
              SizedBox(
                height: 38.0,
              ),
              TextFormField(
                key: ValueKey('loginTxtKey'),
                onChanged: (value) {
                  email = value;
                  //Do something with the user input.
                },
                validator: (String? value) {
                  // return (value == null || value.isEmpty)
                  //     ? "Email id is required."
                  //     : null;
                  if (value == null || value.isEmpty) {
                    return "Email id is required.";
                  } else if (value != 'user') {
                    return "Incorrect Email";
                  } else {
                    return null;
                  }
                },
                decoration: InputDecoration(
                  hintText: 'Enter your email',
                  contentPadding:
                      EdgeInsets.symmetric(vertical: 10.0, horizontal: 20.0),
                  border: OutlineInputBorder(
                    borderRadius: BorderRadius.all(Radius.circular(32.0)),
                  ),
                  enabledBorder: OutlineInputBorder(
                    borderSide: BorderSide(color: Colors.teal, width: 1.0),
                    borderRadius: BorderRadius.all(Radius.circular(32.0)),
                  ),
                  focusedBorder: OutlineInputBorder(
                    borderSide: BorderSide(color: Colors.teal, width: 2.0),
                    borderRadius: BorderRadius.all(Radius.circular(32.0)),
                  ),
                ),
              ),
              SizedBox(
                height: 8.0,
              ),
              TextFormField(
                obscureText: true,
                key: ValueKey('passwordTxtKey'),
                onChanged: (value) {
                  password = value;
                  //Do something with the user input.
                },
                validator: (String? value) {
                  // return (value == null || value.isEmpty)
                  //     ? "Password is required."
                  //     : null;
                  if (value == null || value.isEmpty) {
                    return "Password is required.";
                  } else if (value != 'password') {
                    return "Incorrect password";
                  } else {
                    return null;
                  }
                },
                decoration: InputDecoration(
                  hintText: 'Enter your password.',
                  contentPadding:
                      EdgeInsets.symmetric(vertical: 10.0, horizontal: 20.0),
                  border: OutlineInputBorder(
                    borderRadius: BorderRadius.all(Radius.circular(32.0)),
                  ),
                  enabledBorder: OutlineInputBorder(
                    borderSide: BorderSide(color: Colors.teal, width: 1.0),
                    borderRadius: BorderRadius.all(Radius.circular(32.0)),
                  ),
                  focusedBorder: OutlineInputBorder(
                    borderSide: BorderSide(color: Colors.teal, width: 2.0),
                    borderRadius: BorderRadius.all(Radius.circular(32.0)),
                  ),
                ),
              ),
              SizedBox(
                height: 24.0,
              ),
              Padding(
                padding: EdgeInsets.symmetric(vertical: 16.0),
                child: Material(
                  color: Colors.teal,
                  borderRadius: BorderRadius.all(Radius.circular(30.0)),
                  elevation: 5.0,
                  child: MaterialButton(
                    key: ValueKey('LoginSubmitBtnKey'),
                    onPressed: () {
                      submit();
                      //Implement login functionality.
                    },
                    minWidth: 200.0,
                    height: 42.0,
                    child: Text(
                      'Log In',
                    ),
                  ),
                ),
              ),
            ],
          ),
        ),
      ),
      appBar: AppBar(
        title: Text('Watch App Poc'),
      ),
    );
  }

  Future<void> submit() async {
    if (this._formKey.currentState!.validate()) {
      _formKey.currentState!.save();
      print("Validation passed");
      if (email == 'user') {
        print("username passed");
        if (password == 'password') {
          print("password passed");
          Navigator.push(
            context,
            MaterialPageRoute(builder: (context) => HomeScreen()),
          );
        }
      }
    } else {
      print('validation failed');
    }
  }
}
