...
                                                        padding: EdgeInsets
                                                            .symmetric(
                                                                horizontal: 50,
                                                                vertical: 20),
                                                      ),
                                                      child: Text(
                                                        'Remove from Cart',
                                                        style: TextStyle(
                                                            color:
                                                                Colors.white),
                                                      ),
                                                      onPressed: () {
                                                        this.removeFromCart(
...
                        ],
                      ),
                    );
                  })
                : OrientationBuilder(builder: (context, orientation) {
                    return Center(
                        child: Text("Cart is Empty",
                            style: TextStyle(fontSize: 18, color: Colors.teal),
                            textAlign: TextAlign.center));
                  }),
          ),
        ),
      ),
...
