...
        actions: <Widget>[
          Stack(
            alignment: Alignment.center,
            children: <Widget>[
              IconButton(
                  icon: Icon(Icons.shopping_cart),
                  key: ValueKey('cartIcon'),
                  onPressed: () async {
                    await Navigator.push(
                        context,
                        MaterialPageRoute(
                            builder: (context) =>
                                ProductCartPage(productList: cartItems)));
...
